<resources>
    <string name="app_name">Benefit All Lifters</string>

    <string name="shared_preference_storage_name">SHARED_PREF</string>
    <string name="complete_state_key">STATUS</string>

    <string name="overview_title">Overview</string>
    <string name="schedule_title">Today\'s plan</string>

    <string name="on_boarding_welcome_title">Welcome !</string>
    <string name="on_boarding_welcome_sub_title">Me, Mr.Klokov, is very happy to meet you.</string>
    <string name="on_boarding_welcome_body">Before starting our training journey, can you tell me when you started the weight lifting?</string>
    <string name="on_boarding_welcome_date_picker_label">Click here to choose date</string>
    <string name="on_boarding_welcome_date_picker_view_title">Select date</string>
    <string name="on_boarding_welcome_date_label">Chosen date</string>
    <string name="on_boarding_welcome_date_initial">Not chosen</string>

    <string name="on_boarding_instruction_title">Step %d - %s</string>
    <string name="on_boarding_instruction_sub_title">What is your best record for \n%s?</string>
    <string name="on_boarding_instruction_body">How much weight, and how many reps can you lift %s?\n\nPlease fill your GOAT<sup><small>*</small></sup> records in the form below.</string>
    <string name="on_boarding_instruction_terminology_goat"><sup><small>*</small></sup>Greatest of all time</string>

    <string name="on_boarding_last_step_title">Final Step</string>
    <string name="on_boarding_last_step_body">Please check the items you have written.</string>
    <string name="on_boarding_last_step_date_label">Start date</string>
    <string name="on_boarding_last_step_final_check_label">Have you checked this all?</string>
    <string name="on_boarding_last_step_weight_label">Weight</string>
    <string name="on_boarding_last_step_reps_label">Reps</string>

    <string name="on_boarding_next_btn_label">next step</string>
    <string name="on_boarding_skip_btn_label">skip</string>
    <string name="on_boarding_prev_btn_label">previous step</string>
    <string name="on_boarding_done_btn_label">start our greatest journey</string>

    <string name="estimated_1rm_label">Estimated 1RM</string>
    <string name="max_lift_label">Max Lift</string>
    <string name="max_lift_body_weight_decimal">%dkg x %d</string>
    <string name="max_lift_body_weight_float">%.1fkg x %d</string>

    <string name="home_dDay_title">D + %d</string>
    <string name="home_dDay_sub_title">From %s</string>
    <string name="home_training_records_title_text">Your Barbell Training Journey</string>

    <string name="home_nav_btn_header_title_if_not_exist">The only easy day was yesterday</string>
    <string name="home_nav_btn_header_body_if_not_exist">What\'s your plan of today?</string>
    <string name="home_nav_btn_title_text_if_not_exist">\" Demand Maximum \"</string>
    <string name="home_nav_btn_body_text_if_not_exist">Plan your training session of today</string>
    <string name="home_nav_btn_tail_text_if_not_exist">Click to start</string>

    <string name="home_nav_btn_header_title_if_exist">Are you ready to get more stronger?</string>
    <string name="home_nav_btn_header_body_if_exist">Perfect your training</string>
    <string name="home_nav_btn_title_text_if_exist">\" Блять Едем !! \"</string>
    <string name="home_nav_btn_body_text_if_exist">Demanding impossible maximum result</string>
    <string name="home_nav_btn_tail_text_if_exist">Click to continue</string>

    <string name="home_nav_btn_header_title_if_done">Training was successful</string>
    <string name="home_nav_btn_header_body_if_done">…been stronger than yesterday!</string>
    <string name="home_nav_btn_title_text_if_done">\" You\'ve proved yourself \"</string>
    <string name="home_nav_btn_body_text_if_done">eat, sleep, rest … and REPEAT!!!</string>
    <string name="home_nav_btn_tail_text_if_done">Click to see details</string>

    <string name="home_video_header_title">It\'s time to \"Dmitry Klokov\"</string>
    <string name="home_video_header_body">Let\'s explore Dmitry Klokov\'s AMAZING lift !!!</string>

    <string name="bottom_nav_item_title_home">Home</string>
    <string name="bottom_nav_item_title_overview">Overview</string>
    <string name="bottom_nav_item_title_schedule">Today</string>
    <string name="appbar_menu_item_title_edit">Edit</string>
    <string name="appbar_menu_item_title_add">Add</string>

    <string name="today_workout_overview_title">Today</string>
    <string name="yesterday_workout_overview_title">Yesterday</string>

    <string name="rest_today_text">I will rest today..</string>
    <string name="finish_recording_text">Save training records</string>
    <string name="edit_today_text">Change my schedule</string>

    <string name="add_new_workout_popup_title">Choose your lift</string>
    <string name="light_mode">Light Mode</string>
    <string name="night_mode">Night Mode</string>

    <string-array name="exercise_list">
        <item name="back_squat">Back Squat</item>
        <item name="front_squat">Front Squat</item>
        <item name="bench_press">Bench press</item>
        <item name="deadlift">Conventional Deadlift</item>
        <item name="overhead_press">Overhead press</item>
    </string-array>

    <string name="default_weights_unit">Kg</string>
    <string name="platesview_full_text">Full</string>

    <string name="red_plates_weights_default">25kg</string>
    <string name="blue_plates_weights_default">20kg</string>
    <string name="yellow_plates_weights_default">15kg</string>
    <string name="green_plates_weights_default">10kg</string>
    <string name="white_plates_weights_default">5kg</string>

    <string name="red_plates_weights_small">2.5kg</string>
    <string name="blue_plates_weights_small">2kg</string>
    <string name="yellow_plates_weights_small">1.5kg</string>
    <string name="green_plates_weights_small">1kg</string>
    <string name="white_plates_weights_small">0.5kg</string>

    <string name="main_lifting_one">Main | %s</string>
    <string name="main_lifting_more">Main | %s, %s</string>
    <string name="main_lifting_empty">No Lift</string>

    <string name="add_new_workout">add workout</string>

    <string name="weights_integer_text">%d kg</string>
    <string name="weights_floating_text">%.1f kg</string>

    <string name="sets_text_simplified_template"># %d</string>
    <string name="sets_text_full_template">Set #%d</string>
    <string name="rep_text">rep</string>
    <string name="rep_text_with">%d rep</string>
    <string name="reps_text">reps</string>
    <string name="reps_text_with">%d reps</string>


    <string name="empty_elapsed_time">Not recorded</string>
    <string name="timer_start_button_text">start timer</string>
    <string name="timer_stop_button_text">stop timer</string>
    <string name="timer_reset_button_text">reset timer</string>
    <string name="timer_stop_action_choice_dialog_title">Reset timer</string>
    <string name="timer_stop_action_choice_dialog_message">Do you want to reset your workout timer?</string>
    <string name="timer_stop_action_choice_dialog_positive_action_btn_label">RESET</string>
    <string name="timer_stop_action_choice_dialog_negative_action_btn_label">NO THANKS</string>

    <string name="edit_action_choice_dialog_title">Edit your plan?</string>
    <string name="edit_action_choice_dialog_message">
        Do you want to edit your workout routine of today?
    </string>
    <string name="edit_action_choice_dialog_positive_action_btn_label">YES</string>
    <string name="edit_action_choice_dialog_negative_action_btn_label">NO</string>

    <string name="save_changes_action_choice_dialog_title">
        Your plan has been edited
    </string>
    <string name="save_changes_action_choice_dialog_message">
        Do you want to apply changes and save them permanently?
    </string>
    <string name="save_changes_action_choice_dialog_positive_action_btn_label">SAVE</string>
    <string name="save_changes_action_choice_dialog_negative_action_btn_label">DISCARD</string>


</resources>