<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/home_dest" >

    <fragment
        android:id="@+id/overview_dest"
        android:name="kr.valor.bal.ui.overview.OverviewFragment"
        android:label="@string/overview_title"
        tools:layout="@layout/overview_fragment" >
        <action
            android:id="@+id/action_overview_dest_to_schedule_detail_dest"
            app:destination="@id/schedule_detail_dest" />
    </fragment>
    <fragment
        android:id="@+id/home_dest"
        android:name="kr.valor.bal.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/home_fragment" >
        <action
            android:id="@+id/action_home_dest_to_schedule_dest"
            app:destination="@id/schedule_dest" />
    </fragment>
    <fragment
        android:id="@+id/schedule_dest"
        android:name="kr.valor.bal.ui.schedule.ScheduleFragment"
        android:label="@string/schedule_title"
        tools:layout="@layout/schedule_fragment" >
        <action
            android:id="@+id/action_schedule_dest_to_schedule_set_dest"
            app:destination="@id/schedule_set_dest" />
        <action
        android:id="@+id/action_schedule_dest_to_schedule_detail_dest"
            app:destination="@id/schedule_detail_dest" />
    </fragment>

    <dialog
        android:id="@+id/schedule_set_dest"
        android:name="kr.valor.bal.ui.schedule.dialog.ScheduleSetDialogFragment"
        tools:layout="@layout/schedule_dialog">
        <argument
            android:name="setId"
            app:argType="long" />
    </dialog>

    <fragment
        android:id="@+id/schedule_detail_dest"
        android:name="kr.valor.bal.ui.detail.ScheduleDetailFragment"
        tools:layout="@layout/schedule_detail_fragment">
        <argument
            android:name="overviewId"
            app:argType="long" />
        <action
            android:id="@+id/action_schedule_detail_dest_to_overview_dest"
            app:destination="@id/overview_dest"
            app:popUpTo="@id/overview_dest"
            app:popUpToInclusive="true" />
    </fragment>


</navigation>