<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="kr.valor.bal.onboarding.OnBoardingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/on_boarding_background"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/backgroundShadowAlt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/welcome_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Theme.App.TextAppearance.HighEmphasis24"
            android:text="@string/on_boarding_welcome_title"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toTopOf="@id/top_guideline" />

        <TextView
            android:id="@+id/welcome_sub_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Theme.App.TextAppearance.MediumEmphasis18"
            android:text="@string/on_boarding_welcome_sub_title"
            app:layout_constraintVertical_chainStyle="spread"
            app:layout_constraintTop_toBottomOf="@id/welcome_title"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintBottom_toTopOf="@id/welcome_body" />

        <TextView
            android:id="@+id/welcome_body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Theme.App.TextAppearance.MediumEmphasis"
            android:text="@string/on_boarding_welcome_body"
            app:layout_constraintTop_toBottomOf="@id/welcome_sub_title"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintBottom_toBottomOf="@id/instruction_form_separator" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/show_date_picker_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginVertical="@dimen/margin_large"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{() -> viewModel.onDateChooseButtonClicked()}"
            app:cardBackgroundColor="@color/primaryColorAlpha88"
            app:cardCornerRadius="@dimen/app_cardview_corner_radius_default"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toTopOf="@id/form_top"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintBottom_toBottomOf="@id/form_separator">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/label_icon_enter"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/margin_large"
                    android:background="@drawable/shape_cardview_default_bg_color"
                    android:src="@drawable/ic_baseline_open_in_new_16"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:text="@string/on_boarding_welcome_date_picker_label"
                    android:textAppearance="@style/Theme.App.TextAppearance.HighEmphasis18"
                    android:gravity="center_vertical"
                    app:layout_constraintStart_toEndOf="@id/label_icon_enter"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginVertical="@dimen/margin_large"
            app:cardBackgroundColor="@color/primaryColorAlpha88"
            app:cardCornerRadius="@dimen/app_cardview_corner_radius_default"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toTopOf="@id/form_separator"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintBottom_toBottomOf="@id/form_bottom">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/label_icon_calendar"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/margin_large"
                    android:background="@drawable/shape_cardview_default_bg_color"
                    android:src="@drawable/ic_baseline_calendar_today_24"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <TextView
                    android:id="@+id/selected_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:text="@string/on_boarding_welcome_date_label"
                    android:textAppearance="@style/Theme.App.TextAppearance.MediumEmphasis12"
                    app:layout_constraintStart_toEndOf="@id/label_icon_calendar"
                    app:layout_constraintTop_toTopOf="@id/label_icon_calendar"
                    app:layout_constraintBottom_toTopOf="@id/selected_date_body" />

                <TextView
                    android:id="@+id/selected_date_body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.datePicked == null ? @string/on_boarding_welcome_date_initial : viewModel.datePicked}"
                    android:textAppearance="@style/Theme.App.TextAppearance.HighEmphasis18"
                    android:gravity="center_vertical"
                    app:layout_constraintStart_toStartOf="@id/selected_date_label"
                    app:layout_constraintTop_toBottomOf="@id/selected_date_label"
                    app:layout_constraintBottom_toBottomOf="@id/label_icon_calendar"
                    tools:text="2017-02-16"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_red_light"
            android:text="@string/on_boarding_next_btn_label"
            android:onClick="@{() -> viewModel.onNextStepButtonClicked()}"
            app:icon="@drawable/ic_baseline_arrow_forward_24"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintTop_toTopOf="@id/form_bottom" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/instruction_form_separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/form_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.40" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/form_separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.60" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/form_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.80" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>