<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.content.Context" />
        <variable
            name="item"
            type="kr.valor.bal.data.local.user.UserPersonalRecording" />
        <variable
            name="bindingCreator"
            type="kr.valor.bal.utilities.binding.UserPrBindingParameterCreator" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="220dp"
        android:layout_height="240dp"
        android:layout_marginEnd="@dimen/margin_medium"
        app:cardBackgroundColor="@color/primaryColorAlpha88"
        app:cardCornerRadius="@dimen/app_cardview_corner_radius_default">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/workout_background_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                app:headerImage="@{item.workoutName}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/background_image_bench_press" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/backgroundShadowAlt"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/workout_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Theme.App.TextAppearance.HighEmphasis18"
                android:text="@{bindingCreator.getWorkoutName(item, context)}"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintTop_toTopOf="@id/top_guideline"
                tools:text="Bench press"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/weights_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Theme.App.TextAppearance.MediumEmphasis12"
                android:text="@string/on_boarding_last_step_weight_label"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintTop_toTopOf="@id/content_top_guideline" />

            <TextView
                android:id="@+id/weights_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Theme.App.TextAppearance.HighEmphasis18"
                android:text="@{bindingCreator.getWeights(item, context)}"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintTop_toBottomOf="@id/weights_label"
                tools:text="120 kg"/>

            <TextView
                android:id="@+id/reps_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_textview_medium"
                android:textAppearance="@style/Theme.App.TextAppearance.MediumEmphasis12"
                android:text="@string/on_boarding_last_step_reps_label"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintTop_toBottomOf="@id/weights_value" />

            <TextView
                android:id="@+id/reps_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Theme.App.TextAppearance.HighEmphasis18"
                android:text="@{String.valueOf(item.reps)}"
                app:layout_constraintTop_toBottomOf="@id/reps_unit"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                tools:text="5"/>

            <TextView
                android:id="@+id/estimated_1rm_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Theme.App.TextAppearance.MediumEmphasis12"
                android:text="@string/estimated_1rm_label"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                app:layout_constraintBottom_toTopOf="@id/estimated_1rm_value" />

            <TextView
                android:id="@+id/estimated_1rm_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Theme.App.TextAppearance.HighEmphasis18"
                android:text="@{bindingCreator.getEstimated1RM(item, context)}"
                android:drawablePadding="@dimen/padding_medium"
                app:drawableStartCompat="@drawable/ic_1rm_24"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                app:layout_constraintBottom_toBottomOf="@id/content_bottom_guideline"
                tools:text="130 kg"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/top_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="@dimen/margin_small" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/start_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/margin_medium" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/end_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/margin_medium" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/content_top_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.25" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/content_bottom_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.95" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>